--- a/dinosure_course_gordon_fleming/documents/policy-schedule.html
+++ b/dinosure_course_gordon_fleming/documents/policy-schedule.html
@@ -305,7 +305,7 @@
       </div>
       <div class="one-three-split">
         <div>Dinosaur NDRN</div>
-        <div>{{ policy.module.dinosaur_ndrn }}</div>
+        <div>{{ policy.module.ndrn }}</div>
       </div>
       <br /><br />
 
